package Classes;

import java.io.Serializable;

public interface Detail extends Serializable {
}
