package Enumerations;

public enum PriorityLevel {
    LOW,
    MEDIUM,
    HIGH
}
