package Enumerations;

public enum RepetitionInterval {
    DAILY,
    WEEKLY,
    MONTLY
}
