@startuml

title __LOGIC's Class Diagram__\n

  namespace Classes {
    class Classes.App {
    }
  }
  

  namespace Classes {
    class Classes.DeadLine {
    }
  }
  

  namespace Classes {
    class Classes.Description {
    }
  }
  

  namespace Classes {
    abstract class Classes.Detail {
    }
  }
  

  namespace Classes {
    class Classes.Folder {
    }
  }
  

  namespace Classes {
    class Classes.Label {
    }
  }
  

  namespace Classes {
    class Classes.Main {
    }
  }
  

  namespace Classes {
    class Classes.Priority {
    }
  }
  

  namespace Classes {
    class Classes.Repetition {
    }
  }
  

  namespace Classes {
    class Classes.Task {
    }
  }
  

  namespace Classes {
    class Classes.ToDoList {
    }
  }
  

  namespace Enumerations {
    enum PriorityLevel {
    }
  }
  

  namespace Enumerations {
    enum RepetitionInterval {
    }
  }
  

  Classes.App o-- Classes.ToDoList : toDoList
  Classes.DeadLine -up-|> Classes.Detail
  Classes.Description -up-|> Classes.Detail
  Classes.Priority -up-|> Classes.Detail
  Classes.Priority o-- Enumerations.PriorityLevel : priorityLevel
  Classes.Repetition -up-|> Classes.Detail
  Classes.Repetition o-- Enumerations.RepetitionInterval : repetitionInterval
  Classes.Task o-- Classes.Label : label


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
